--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -17,8 +17,8 @@
     },
     "cta": {
         "topper": "Book Today",
-        "title": "Experience Authentic Thai Healing",
-        "text": "Ready to relieve tension and restore balance? Our traditional Thai massage treatments are designed to address your specific wellness needs with genuine therapeutic care.",
+        "title": "Discover the Authentic Art of Thai Wellness",
+        "text": "Ready to release tensions and find your balance? Our traditional Thai massage treatments are designed to promote wellbeing, relaxation and body harmony.",
         "cta": "Book Your Treatment"
     },
     "about-page": {
