--- a/src/locales/it/common.json
+++ b/src/locales/it/common.json
@@ -18,8 +18,8 @@
     },
     "cta": {
         "topper": "Prenota Ora",
-        "title": "Scopri l'Autentica Arte Curativa Thailandese",
-        "text": "Pronto a sciogliere le tensioni e ritrovare il tuo equilibrio? I nostri trattamenti di massaggio thailandese tradizionale sono progettati per soddisfare le tue esigenze di benessere con vera cura terapeutica.",
+        "title": "Scopri l’Autentica Arte del Benessere Thailandese",
+        "text": "Pronto a sciogliere le tensioni e ritrovare il tuo equilibrio? I nostri trattamenti di massaggio thailandese tradizionale sono pensati per favorire il benessere, il rilassamento e l’armonia del corpo.",
         "cta": "Prenota Appuntamento"
     },
     "about-page": {
