--- a/src/locales/it/home.json
+++ b/src/locales/it/home.json
@@ -20,7 +20,7 @@
 			},
 			{
 				"heading": "Thai Solution Massage",
-				"p": "Il nostro trattamento distintivo che unisce l'antica sapienza delle linee energetiche Sen con una valutazione personalizzata. Attraverso il sistema Benjapakee (Cinque Elementi), lavoriamo su dolori muscolari, problemi articolari, tensioni nervose e ripristiniamo l'equilibrio naturale del corpo sul nostro lettino professionale."
+				"p": "Il nostro trattamento distintivo unisce l'antica sapienza delle linee energetiche con una valutazione personalizzata. Lavoriamo su dolori muscolari, problemi articolari, tensioni nervose e ripristiniamo l'equilibrio naturale del corpo sul nostro lettino professionale."
 			},
 			{
 				"heading": "Thai Rud Sen (con olio)",
@@ -42,10 +42,10 @@
 				"p": "Oltre 570 ore di formazione intensiva in Thailandia, Nuova Zelanda e Regno Unito. Aggiornamento professionale continuo da oltre 16 anni significa beneficiare sia di tecniche tradizionali provate nel tempo che di comprensione moderna del corpo umano."
 			},
 			{
-				"p": "Nessun assistente, nessuna operatrice a rotazione. Ann conduce personalmente ogni consulenza e trattamento, garantendo continuità nelle sessioni, comprensione profonda delle tue esigenze specifiche e approcci personalizzati coerenti durante tutto il tuo percorso di benessere."
+				"p": "Ann conduce personalmente ogni consulenza e trattamento, garantendo continuità nelle sessioni, comprensione profonda delle tue esigenze specifiche e approcci personalizzati coerenti durante tutto il tuo percorso di benessere."
 			},
 			{
-				"p": "Il nostro approccio distintivo combina l'antico lavoro sui meridiani energetici Sen con una valutazione personalizzata. Seguendo la saggezza tradizionale tramandata attraverso generazioni, ripristiniamo l'equilibrio naturale del corpo e promuoviamo un autentico rinnovamento."
+				"p": "Il nostro approccio distintivo combina l'antico lavoro sui meridiani energetici con una valutazione personalizzata. Seguendo la saggezza tradizionale tramandata attraverso generazioni, ripristiniamo l'equilibrio naturale del corpo e promuoviamo un autentico rinnovamento."
 			}
 		]
 	},
