--- a/src/locales/it/home.json
+++ b/src/locales/it/home.json
@@ -24,7 +24,7 @@
 			},
 			{
 				"heading": "Thai Rud Sen (con olio)",
-				"p": "Massaggio delicato e ritmico lungo i meridiani energetici tradizionali con olio di Jojoba biologico. Perfetto per rilassamento profondo, riduzione dello stress e riequilibrio del sistema nervoso. Ideale per chi cerca un'esperienza avvolgente e confortevole."
+				"p": "Perfetto per rilassamento profondo, riduzione dello stress e riequilibrio del sistema nervoso. Ideale per chi cerca un'esperienza avvolgente e confortevole."
 			},
 			{
 				"heading": "Drenaggio Linfatico",
@@ -52,7 +52,7 @@
 	"featuredService1": {
 		"topper": "Trattamento in Evidenza",
 		"title": "Scopri il Nostro Thai Solution Massage",
-		"text1": "Il Thai Solution Massage utilizza il sistema Benjapakee (Cinque Elementi) per lavorare su squilibri muscolari, nervosi, articolari ed energetici. Seguendo l'antica saggezza delle linee energetiche Sen, identifichiamo le aree di tensione attraverso gli indicatori naturali del corpo—tendini e legamenti che rivelano i pattern individuali.",
+		"text1": "Il Thai Solution Massage utilizza il sistema Benjapakee (Cinque Elementi) per lavorare su squilibri muscolari, nervosi, articolari ed energetici. Seguendo l'antica saggezza delle linee energetiche Sen, identifichiamo le aree di tensione attraverso gli indicatori naturali del corpo—tendini e legamenti.",
 		"text2": "Che tu soffra di mal di testa da tensione, dolori muscolari, crampi ai polpacci o rigidità articolare, il Thai Solution Massage affronta sia i sintomi che le cause sottostanti. Attraverso valutazione esperta e trattamento personalizzato, aiutiamo il tuo corpo a rigenerarsi e ritrovare il suo equilibrio naturale.",
 		"cta": "Thai Solution Massage"
 	},
