--- a/src/locales/it/massages.json
+++ b/src/locales/it/massages.json
@@ -36,7 +36,7 @@
         },
         {
             "name": "Thai Rud Sen (con olio)",
-            "description": "Massaggio ritmico con olio lungo i meridiani energetici tradizionali con olio di Jojoba biologico. Trattamento profondamente calmante ideale per riduzione dello stress, riequilibrio del sistema nervoso e rilassamento completo."
+            "description": "Trattamento profondamente calmante ideale per riduzione dello stress, riequilibrio del sistema nervoso e rilassamento completo."
         },
         {
             "name": "Drenaggio Linfatico",
@@ -58,7 +58,7 @@
         },
         {
             "name": "Thai Rud Sen (con olio)",
-            "description": "Lussuoso massaggio esteso con olio seguendo le linee energetiche con Jojoba biologico. Tempo extra permette rilassamento più profondo, dissoluzione completa dello stress e ripristino totale dell'equilibrio del sistema nervoso."
+            "description": "Tempo extra permette rilassamento più profondo, dissoluzione completa dello stress e ripristino totale dell'equilibrio del sistema nervoso."
         },
         {
             "name": "Drenaggio Linfatico",
