--- a/src/locales/it/massages.json
+++ b/src/locales/it/massages.json
@@ -80,7 +80,7 @@
         },
         {
             "name": "Thai Rud Sen (con olio)",
-            "description": "Viaggio rigenerante completo lungo tutti i principali meridiani energetici con oli biologici. Massimo rilassamento e beneficio per il benessere. Perfetto per stress severo, tensione cronica o quando hai bisogno di rigenerazione profonda."
+            "description": "Massimo rilassamento e beneficio per il benessere. Perfetto per stress severo, tensione cronica o quando hai bisogno di rigenerazione profonda."
         },
         {
             "name": "Drenaggio Linfatico",
